--- a/opnsense-cmd.conf
+++ b/opnsense-cmd.conf
@@ -2,12 +2,12 @@
  * Support for OPNsense router
  *
  */
- 
+
 template CheckCommand "check_opnsense_update_t" {
   import "plugin-check-command"
-  
+
 	command = [ CustomPluginDir + "/check_opnsense_update"]
-	
+
 	arguments = {
 		"-H" = "$opns_address$"
 		"-p" = "$opns_port$"
@@ -24,7 +24,6 @@ template CheckCommand "check_opnsense_update_t" {
 }
 
 
-
 object CheckCommand "check_opnsense_update" {
   import "check_opnsense_update_t"
 }
@@ -33,11 +32,32 @@ object CheckCommand "check_opnsense_update" {
 object ServiceGroup "opnsenseupdate" {
   display_name = "Update OPNsense"
 }
-  
+
 object HostGroup "opnsense" {
   display_name = "OPNsense"
 }
- 
+
+/*
+* Host template
+*/
+
+template Host "opnsense-router" {
+  import "generic-host"
+
+/*  icon_image = "opnsense.ico" */
+	check_command = "http"
+
+	vars.http_address = "$address$"
+	vars.http_ssl = true
+	vars.http_port = 4443
+
+  vars.os = "router"
+  vars.notification["mail"] = { groups = [ "icingaadmins" ] }
+  action_url = "https://$address$:4443"
+  groups +=["opnsense"]
+}
+
+
 
 /*
 *  Service definitiones
@@ -54,11 +74,10 @@ template Service "opns_update" {
 
 apply Service "update" {
   import "opns_update";
-	
+
 	display_name = "Update"
-#	host_name = "router-fryksas"
 	check_command = "check_opnsense_update"
-  
+
   assign where host.vars.opns_key
 }
 
